Fix the "start quickly"/"news" alignment issues.

--- a/new-racket-web/css/style.css
+++ b/new-racket-web/css/style.css
@@ -10,3 +10,5 @@ However, this blank file is available if you prefer
 
   #growboxes { margin-top: 10pt; }
   .panetitle { color: red; font-size: 120%; margin-bottom: 4pt }
+
+  pre.codesnip { font-size: 140%; }
